--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,15 +1,11 @@
-@font-face {
-  font-family: "my-font";
-  src: url("./19313.ttf") format("truetype");
-}
 button {
-  font-family: "my-font";
   display: block;
-  padding: 10px;
+  padding: 10px 0px;
   width: 240px;
   border-radius: 5px;
   margin: 5px auto;
   font-size: 21px;
+  font-weight: 800;
 }
 div {
   box-sizing: border-box;
