--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -46,6 +46,16 @@
 .game_cell-start {
     background-color: aquamarine;
 }
+.game_cell-start::after {
+    content: attr(data-charged-chips);
+    position: absolute;
+    bottom: -3px;
+    right: -1px;
+    font-weight: 600;
+    width: 100%;
+    text-align: end;
+    font-size: inherit;
+}
 .game_cell-safe-house {
     background-color: beige;
 }
