--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,15 +1,3 @@
-button {
-  display: block;
-  padding: 10px 0px;
-  width: 240px;
-  border-radius: 5px;
-  margin: 5px auto;
-  font-size: 21px;
-  font-weight: 800;
-}
-div {
-  box-sizing: border-box;
-}
 .App {
   width: 900px;
   height: 650px;
@@ -45,7 +33,7 @@ div {
   transition: all 0.8s cubic-bezier(.33,1.45,.93,.97);
   border: solid 2px violet;
   border-radius: 10px;
-  box-shadow: 1px 1px 3px 2px  black;
+  box-shadow: 1px 1px 3px 2px var(--color-black);
 }
 .App_game-finished_container_shown {
   top: calc(var(--cell-size) * 5);
