--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -8,6 +8,8 @@
     width: 100%;
     text-align: center;
     font-size: calc(var(--cell-size) / 1.5);
+    line-height: 40px;
+    font-family: initial;
 }
 .game_board {
     position: relative;
@@ -63,37 +65,40 @@
     border: 0;
     background-color: lavender;
 }
-.game_cell_center::after {
-    line-height: 0.7;
+.arrow::before {
+    background-repeat: no-repeat;
+    background-size: cover;
+    content: ' ';
+    display: block;
+    position: absolute;
+    width: 70%;
+    height: 70%;
+    top: 7px;
+    left: 7px;
 }
-.game_cell_arrow::after {
-    line-height: 0.8;
-    font-size: var(--cell-size);
+.arrows-crossing::before {
+    background-image: url(../../assets/icons/move.svg);
+    transform: rotate(45deg);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
-/* .game_cell_player1 {
-    background-color: red;
+.arrow-right::before {
+    background-image: url(../../assets/icons/arrow.svg);
 }
-.game_cell_player2 {
-    background-color: blue;
+.arrow-down::before {
+    background-image: url(../../assets/icons/arrow.svg);
+    transform: rotate(90deg);
 }
-.game_cell_player3 {
-    background-color: yellow;
+.arrow-left::before {
+    background-image: url(../../assets/icons/arrow.svg);
+    transform: rotate(180deg);
 }
-.game_cell_player4 {
-    background-color: green;
+.arrow-up::before {
+    background-image: url(../../assets/icons/arrow.svg);
+    transform: rotate(270deg);
 }
-.game_cell-finish_player1 {
-    background-color: rgb(255, 58, 17);
-}
-.game_cell-finish_player2 {
-    background-color: rgb(104, 113, 215);
-}
-.game_cell-finish_player3 {
-    background-color: rgb(255, 247, 91);
-}
-.game_cell-finish_player4 {
-    background-color: rgb(52, 216, 101);
-} */
 .game_arrow-body {
     position: absolute;
 }
@@ -329,74 +334,4 @@
 #game_chip_player4_num4 {
     top: calc(var(--cell-size) * 3.9);
     left: calc(var(--cell-size) * 9.3);
-}
-.game_player-info {
-    width: calc(var(--cell-size) * 3.5);
-    height: calc(var(--cell-size) * 1.5);
-    border: solid 1px black;
-    border-radius: 3px;
-    display: flex;
-    background-color: blueviolet;
-    position: absolute;
-    align-items: center;
-}
-.game_player-info_img {
-    border: 2px solid black;
-    border-radius: 2px;
-    margin: 2px;
-    height: 54px;
-}
-.game_player-info_name {
-    color: black;   
-}
-.game_player-info_1 {
-    bottom: 0;
-    right: 0;
-    justify-content: flex-end;
-}
-.game_player-info_2 {
-    bottom: 0;
-    left: 0;
-    justify-content: flex-end;
-    flex-direction: row-reverse;
-}
-.game_player-info_3 {
-    top: 0;
-    left: 0;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-}
-.game_player-info_4 {
-    top: 0;
-    right: 0;
-    justify-content: flex-end;
-}
-.game_player-info_me {
-    border-width: 2px;
-}
-.game_player-info_ready {
-    width: calc(var(--cell-size) * 2);
-    height: calc(var(--cell-size) * .8);
-    border: 2px solid black;
-    position: absolute;
-    line-height: calc(var(--cell-size) * 0.7);
-    font-size: calc(var(--cell-size) * 0.45);
-    font-weight: 100;
-    text-align: center;
-}
-.game_player-info_ready_1 {
-    top: calc(var(--cell-size) * -0.8);
-    right: -2px;
-}
-.game_player-info_ready_2 {
-    top: calc(var(--cell-size) * -0.8);
-    left: -2px;
-}
-.game_player-info_ready_3 {
-    bottom: calc(var(--cell-size) * -0.8);
-    left: -2px;
-}
-.game_player-info_ready_4 {
-    bottom: calc(var(--cell-size) * -0.8);
-    right: -2px;
 }
