--- a/src/Components/GameFinished/GameFinished.css
+++ b/src/Components/GameFinished/GameFinished.css
@@ -1,7 +1,7 @@
 .game-finished_main-container {
     width: 100%;
     height: 100%;
-    font-family: "pacifico";
+    font-weight: 500;
     color: var(--color-black);
 }
 .game_finished_table {
@@ -56,7 +56,7 @@
     width: 40px;
 }
 .game_finished_table-header {
-    color: black;
+    color: var(--color-black);
 } 
 .game-finished_close {
     position: absolute;
