--- a/src/Components/Tables/Tables.css
+++ b/src/Components/Tables/Tables.css
@@ -29,24 +29,59 @@
     width: 50%
 }
 .tables_row-header {
-    font-weight: 300;
+    font-weight: 600;
+    font-size: large;
+    font-size: 23px;    
 }
 .tables_row {
-    font-family: "pacifico";
+    font-weight: 600;
+    font-size: 20px;
+    margin: 3px auto;
+    border-bottom: 3px solid bisque;
 }
-tbody .tables_row:nth-child(odd) {
-    background-color: rgba(0,0,0,0.1);
+.tables_row > *, .tables_row-header > * {
+    text-align: center;
 }
-.tables_name {
-    width: 200px;
+.tables_row > * {
+    background-color: tan;
 }
 .tables_bet {
     width: 90px;
 }
 .tables_rank {
     width: 90px;
-    text-align: center;
+    border-radius: 0px 5px 5px 0px;
 }
 .tables_players {
-    width: 90px;
+    width: 300px;
+    padding-left: 3px;
+    border-radius: 5px 0px 0px 5px;
+}
+.tables_players:not(.table_players-header) {
+    display: flex;
+    align-items: center;
+}
+.tables_player-icon {
+    width: 40px;
+    height: 40px;
+    margin: 3px;
+    box-shadow: 0px 1px 2px black;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.tables_join-button {
+    background: rgb(28, 184, 65);
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    padding: 5px 23px;
+    margin: 0px 10px;
+    background-image: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 48%, rgba(255,255,255,0.3) 52%);
+}
+.table-join-icon {
+    background-color: whitesmoke;
+    background-image: url(../../assets/icons/more.svg);
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
