--- a/src/Components/PlayerInfo/PlayerInfo.css
+++ b/src/Components/PlayerInfo/PlayerInfo.css
@@ -3,10 +3,11 @@
     height: calc(var(--cell-size) * 1.1);
     border-radius: 3px;
     display: flex;
-    background-color: rgba(100, 100, 100, 0.5);
+    background-color: rgb(170, 170, 170);
     box-shadow: 0px 0px 3px grey;
     position: absolute;
     align-items: center;
+    z-index: 1;
 }
 .player-info_img {
     border-radius: 2px;
@@ -73,7 +74,8 @@
 .player-info_2 .player-info_name,
 .player-info_3 .player-info_name,
 .player-info_2 .player-info_rank,
-.player-info_3 .player-info_rank {
+.player-info_3 .player-info_rank,
+.player-info_ready_1, .player-info_ready_4 {
     flex-direction: row-reverse;
 }
 
@@ -100,28 +102,54 @@
     right: 0;
 }
 .player-info_ready {
-    width: calc(var(--cell-size) * 2);
-    height: calc(var(--cell-size) * .8);
-    border: 2px solid black;
+    width: calc(var(--cell-size) * 2.4);
+    height: calc(var(--cell-size) * 1); 
     position: absolute;
     line-height: calc(var(--cell-size) * 0.7);
     font-size: calc(var(--cell-size) * 0.45);
     font-weight: 100;
-    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgb(210, 210, 210);
+    transition: all 0.2s ease-in-out;
 }
 .player-info_ready_1 {
-    top: calc(var(--cell-size) * -0.8);
-    right: -2px;
+    border-radius: 5px 5px 0px 0px;
+    bottom: 0px;
+    right: 0px;
+}
+.player-info_ready_1.player-info_ready-active {
+    bottom: calc(var(--cell-size) * 1.1);
 }
 .player-info_ready_2 {
-    top: calc(var(--cell-size) * -0.8);
-    left: -2px;
+    border-radius: 5px 5px 0px 0px;
+    bottom: 0px;
+    left: 0px;
+}
+.player-info_ready_2.player-info_ready-active {
+    bottom: calc(var(--cell-size) * 1.1);
 }
 .player-info_ready_3 {
-    bottom: calc(var(--cell-size) * -0.8);
-    left: -2px;
+    border-radius: 0px 0px 5px 5px;
+    left: 0px;
+    top: 0px;
+}
+.player-info_ready_3.player-info_ready-active {
+    top: calc(var(--cell-size) * 1.1);
 }
 .player-info_ready_4 {
-    bottom: calc(var(--cell-size) * -0.8);
-    right: -2px;
+    border-radius: 0px 0px 5px 5px;
+    right: 0px;
+    top: 0px;
+}
+.player-info_ready_4.player-info_ready-active {
+    top: calc(var(--cell-size) * 1.1);
+}
+.player-info_fire::before {
+    content: ' ';
+    width: 30px;
+    height: 30px;
+    display: block;
+    background-image: url(../../assets/icons/fire.svg);
 }
