--- a/src/Components/App/common.css
+++ b/src/Components/App/common.css
@@ -14,8 +14,41 @@ button {
     font-weight: 600;
     font-family: inherit;
 }
+.hidden {
+    display: none !important;
+}
 div {
     box-sizing: border-box;
+}
+.grey {
+    color: grey;
+}
+.flex {
+    display: flex;
+}
+.flex-sb {
+    display: flex;
+    justify-content: space-between;
+}
+.margin-lr-5 {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.p-tb-5 {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.b-b-1 {
+    border-bottom-width: 1px !important;
+}
+.b-r-1 {
+    border-right-width: 1px !important;
+}
+.b-t-1 {
+    border-top-width: 1px !important;
+}
+.b-l-1 {
+    border-left-width: 1px !important;
 }
 .btn-small {
     width: 100%;
@@ -33,10 +66,10 @@ div {
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+    background: #888; 
 }
 ::-webkit-scrollbar-thumb {
-    background: #888; 
+    background: #f1f1f1; 
 }
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
