--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -8,13 +8,13 @@
     width: 100%;
     text-align: center;
     font-size: calc(var(--cell-size) / 1.5);
-    line-height: 40px;
+    line-height: 45px;
+    height: 100%;
     font-family: initial;
 }
 .game_board {
     position: relative;
     width: calc(var(--cell-size) * 13);
-    background-color: white;
     height: calc(var(--cell-size) * 13);
 }
 .game_container {
@@ -44,6 +44,7 @@
 .game_space {
     height: var(--cell-size);
     float: left;
+    border: 0px solid black;
 }
 .game_space1 {
     width: calc(var(--cell-size) * 1);
@@ -65,12 +66,30 @@
     float: left;
     width: var(--cell-size);
     height: var(--cell-size);
-    border: 1px solid var(--color-black);
-    border-radius: 2px;
-    background-color: linen;
+    border: solid var(--color-black);
+    border-width: 1px 0px 0px 1px;
+    background: linear-gradient(to bottom, #FFE4C4 0%, #F0D5B5 100%);
+}
+.game_container-player2 .game_cell {
+    background: linear-gradient(to left, #FFE4C4 0%, #F0D5B5 100%);
+}
+.game_container-player3 .game_cell {
+    background: linear-gradient(to top, #FFE4C4 0%, #F0D5B5 100%);
+}
+.game_container-player4 .game_cell {
+    background: linear-gradient(to right, #FFE4C4 0%, #F0D5B5 100%);
 }
 .game_cell-start {
-    background-color: aquamarine;
+    background: linear-gradient(to bottom, #8DB600 0%, #7EA700 100%);
+}
+.game_container-player2 .game_cell-start {
+    background: linear-gradient(to left, #8DB600 0%, #7EA700 100%);
+}
+.game_container-player3 .game_cell-start {
+    background: linear-gradient(to top, #8DB600 0%, #7EA700 100%);
+}
+.game_container-player4 .game_cell-start {
+    background: linear-gradient(to right, #8DB600 0%, #7EA700 100%);
 }
 .game_cell-start::after {
     content: attr(data-charged-chips);
@@ -83,11 +102,29 @@
     font-size: inherit;
 }
 .game_cell-safe-house {
-    background-color: beige;
+    background: linear-gradient(to bottom, #7CB9E8 0%, #6DAAD9 100%);
+}
+.game_container-player2 .game_cell-safe-house {
+    background: linear-gradient(to left, #7CB9E8 0%, #6DAAD9 100%);
+}
+.game_container-player3 .game_cell-safe-house {
+    background: linear-gradient(to top, #7CB9E8 0%, #6DAAD9 100%);
+}
+.game_container-player4 .game_cell-safe-house {
+    background: linear-gradient(to right, #7CB9E8 0%, #6DAAD9 100%);
 }
 .game_cell-finish {
-    border: 0;
-    background-color: lavender;
+    border: 0px solid black;
+    background: -webkit-linear-gradient(top, #EFDECD 0%, #E0CFBE 100%);
+}
+.game_container-player2 .game_cell-finish {
+    background: -webkit-linear-gradient(right, #EFDECD 0%, #E0CFBE 100%);
+}
+.game_container-player3 .game_cell-finish {
+    background: -webkit-linear-gradient(bottom, #EFDECD 0%, #E0CFBE 100%);
+}
+.game_container-player4 .game_cell-finish {
+    background: -webkit-linear-gradient(left, #EFDECD 0%, #E0CFBE 100%);
 }
 .arrow::before {
     background-repeat: no-repeat;
@@ -202,7 +239,7 @@
     height: calc(var(--cell-size) * 2);
     border: solid var(--color-black) 1px;
     border-radius: calc(var(--cell-size) * .5);
-    background-color: ghostwhite;
+    background: linear-gradient(to bottom, #F0F8FF 0%, #E1E9F0 100%);
 }
 .game_chip-base_player1 {
     top: calc(var(--cell-size) * 8.2);
@@ -284,7 +321,7 @@
     box-shadow:  0px 0px 5px 5px red;
 }
 .game_cell-move {
-    background-color: rebeccapurple;
+    background: linear-gradient(to bottom, #9966CC 0%, #8A57BD 100%);
 }
 .game_chip-selected {
     box-shadow:  0px 0px 4px 4px red;    
