--- a/src/Components/PlayerInfo/PlayerInfo.css
+++ b/src/Components/PlayerInfo/PlayerInfo.css
@@ -1,10 +1,12 @@
 .player-info {
     width: calc(var(--cell-size) * 3.5);
-    height: calc(var(--cell-size) * 1.1);
+    height: calc(var(--cell-size) * 1.3);
     border-radius: 3px;
     display: flex;
-    background-color: rgb(170, 170, 170);
-    box-shadow: 0px 0px 3px grey;
+    /* background-color: rgb(170, 170, 170);
+    box-shadow: 0px 0px 3px grey; */
+    /* background: linear-gradient(to bottom, #AB274F 0%, #9C1840 100%); */
+    background: linear-gradient(to bottom, #A57164 0%, #966255 100%);
     position: absolute;
     align-items: center;
     z-index: 2;
@@ -12,8 +14,6 @@
 .player-info_img {
     border-radius: 2px;
     box-shadow: 0px 0px 3px grey;
-    position: relative;
-    bottom: 5px;
     margin: 5px;
     height: 50px;
 }
