--- a/src/Components/Tables/Tables.css
+++ b/src/Components/Tables/Tables.css
@@ -4,14 +4,14 @@
 }
 .tables_list {
     width: 560px;
-    height: 450px;
-    border: 1px solid black;
+    height: 475px;
+    /* border: 1px solid black; */
     position: absolute;
     top: 15px;
     left: 20px;
     overflow-y: scroll;
     padding: 15px 27px;
-    background-color: bisque;
+    background-color: rgba(255, 255, 255, 0.4);
 }
 .tables_container {
     position: relative;
