--- a/src/Components/PlayerInfo/PlayerInfo.css
+++ b/src/Components/PlayerInfo/PlayerInfo.css
@@ -3,9 +3,6 @@
     height: calc(var(--cell-size) * 1.3);
     border-radius: 3px;
     display: flex;
-    /* background-color: rgb(170, 170, 170);
-    box-shadow: 0px 0px 3px grey; */
-    /* background: linear-gradient(to bottom, #AB274F 0%, #9C1840 100%); */
     background: linear-gradient(to bottom, #A57164 0%, #966255 100%);
     position: absolute;
     align-items: center;
@@ -29,7 +26,7 @@
     display: flex;
     flex-direction: column;
     flex: 10 auto;
-    padding: 5px;
+    padding: 0px 5px;
 }
 .player-info_bottom-right .player-info_main,
 .player-info_top-right .player-info_main {
@@ -42,10 +39,15 @@
 .player-info_rank {
     display: flex;
     align-items: center;
-    margin-top: -7px;
+    /* margin-top: -7px; */
 }
 .player-info_rank-star {
+    background-image: url(../../assets/icons/star.svg);
+    height: 20px;
+    width: 20px;
+    background-size: cover;
     color: gold;
+    margin-right: 3px;
 }
 .player-info_chip-icon {
     display: inline-block;
@@ -53,7 +55,16 @@
     height: 10px;
     border: solid 1px black;
     border-radius: 50%;
-    margin: 3px;
+    margin: 3px 5px 3px 3px;
+}
+.player-info_bottom-left .player-info_rank-star,
+.player-info_top-left .player-info_rank-star {
+    margin-right: 0px;
+    margin-left: 3px;
+}
+.player-info_bottom-left .player-info_chip-icon,
+.player-info_top-left .player-info_chip-icon {
+    margin: 3px 3px 5px 3px;
 }
 .player-info_chip-icon_1 {
     background-color: red;
@@ -68,7 +79,7 @@
     background-color: yellow;
 }
 .player-info_name, .player-info_rank {
-    font-size: 19px;
+    font-size: 17px;
     display: flex;
 }
 .player-info_bottom-left .player-info_name,
@@ -111,7 +122,7 @@
     align-items: center;
     display: flex;
     justify-content: space-evenly;
-    background-color: rgb(210, 210, 210);
+    background: linear-gradient(to bottom, #CD9575 0%, #BE8666 100%);
     transition: all 0.2s ease-in-out;
     z-index: 1;
 }
@@ -120,32 +131,28 @@
     bottom: 0px;
     right: 0px;
 }
-.player-info_ready_bottom-right.player-info_ready-active {
-    bottom: calc(var(--cell-size) * 1.1);
-}
 .player-info_ready_bottom-left {
     border-radius: 5px 5px 0px 0px;
     bottom: 0px;
     left: 0px;
 }
+.player-info_ready_bottom-right.player-info_ready-active,
 .player-info_ready_bottom-left.player-info_ready-active {
-    bottom: calc(var(--cell-size) * 1.1);
+    bottom: calc(var(--cell-size) * 1.25);
 }
 .player-info_ready_top-left {
     border-radius: 0px 0px 5px 5px;
     left: 0px;
     top: 0px;
 }
-.player-info_ready_top-left.player-info_ready-active {
-    top: calc(var(--cell-size) * 1.1);
-}
 .player-info_ready_top-right {
     border-radius: 0px 0px 5px 5px;
     right: 0px;
     top: 0px;
 }
+.player-info_ready_top-left.player-info_ready-active,
 .player-info_ready_top-right.player-info_ready-active {
-    top: calc(var(--cell-size) * 1.1);
+    top: calc(var(--cell-size) * 1.25);
 }
 .player-info_fire::before {
     content: ' ';
