--- a/src/Components/App/common.css
+++ b/src/Components/App/common.css
@@ -5,6 +5,11 @@ table {
     opacity: 0.5;
 }
 button {
+    font-family: inherit;
+    cursor: pointer;
+    outline: none;
+}
+.btn-grey {
     display: block;
     padding: 10px 0px;
     width: 240px;
@@ -12,10 +17,15 @@ button {
     margin: 5px auto;
     font-size: 30px;
     font-weight: 600;
-    font-family: inherit;
     background: linear-gradient(to bottom, #F0F8FF 0%, #E1E9F0 100%);
 }
-button:not(:disabled) {
+.bg-green {
+    background: linear-gradient(to bottom, #008000 0%, #007100 100%);
+}
+.btn-grey:hover {
+    background: linear-gradient(to bottom, #F0F8FF 0%, white 100%)
+}
+.btn-grey:not(:disabled) {
     color: var(--color-black);
 }
 .hidden {
@@ -23,6 +33,58 @@ button:not(:disabled) {
 }
 div {
     box-sizing: border-box;
+}
+.modal {
+    position: absolute;
+    outline: none;
+    top: 50%;
+    left: 50%;
+    right: auto;
+    bottom: auto;
+    transform: translate(-50%, -50%);
+    box-shadow: 1px 1px 3px 2px var(--color-black);
+    font-size: calc(var(--cell-size) * 0.45);
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    padding: 5px;
+    background: linear-gradient(to bottom, #FAEBD7 0%, #EBDCC8 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAEBD7), color-stop(100%, #EBDCC8));
+    background: -webkit-linear-gradient(top, #FAEBD7 0%, #EBDCC8 100%);
+    background: -moz-linear-gradient(top, #FAEBD7 0%, #EBDCC8 100%);
+    background: -o-linear-gradient(top, #FAEBD7 0%, #EBDCC8 100%);
+    background: -ms-linear-gradient(top, #FAEBD7 0%, #EBDCC8 100%);
+    background-color: papayawhip;
+}
+.ReactModal__Overlay {
+    opacity: 0;
+    transform: translateY(-100px);
+    transition: all 300ms ease-in-out;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.1) !important;
+}
+.ReactModal__Overlay--after-open {
+    opacity: 1;
+    transform: translateY(0px);
+}
+.ReactModal__Overlay--before-close {
+    opacity: 0;
+    transform: translateY(-100px);
+}
+.modal-header {
+    font-weight: 600;
+    width: fit-content;
+    margin: 6px auto;
+}
+.modal-close-btn {
+    border-radius: 4px;
+    border: 0px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    padding: 3px;
+    margin: 3px auto 3px;
+    padding: 4px 40px;
+    font-weight: 400;
+    font-size: calc(var(--cell-size) * 0.5);
 }
 .grey {
     color: grey;
@@ -41,6 +103,16 @@ div {
 .flex-sb {
     display: flex;
     justify-content: space-between;
+}
+.flex-center {
+    display: flex;
+    align-items: center;
+}
+.pointer {
+    cursor: pointer;
+}
+.invis {
+    visibility: hidden;
 }
 .margin-lr-5 {
     margin-left: 5px;
@@ -62,7 +134,14 @@ div {
 .b-l-1 {
     border-left-width: 1px !important;
 }
-.btn-small {
+.btn-brown {
+    color: white !important;
+    background-image: linear-gradient(to bottom, #A57164 0%, #966255 100%);
+}
+.btn-brown:hover {
+    background-image: linear-gradient(to bottom, #a37b71 0%, #946d64 100%);
+}
+.btn-grey-small {
     width: 100%;
     font-weight: 600;
     font-size: 20px;
