--- a/src/Components/GameStart/GameStart.css
+++ b/src/Components/GameStart/GameStart.css
@@ -1,33 +1,7 @@
 .game-start_modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    right: auto;
-    bottom: auto;
     width: calc(var(--cell-size) * 7);
     height: calc(var(--cell-size) * 5.5);
-    transform: translate(-50%, -50%);
-    font-size: calc(var(--cell-size) * 0.45);
-    border-radius: 10px;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    box-shadow: 1px 1px 3px 2px var(--color-black);
-    background: linear-gradient(to bottom, #FAEBD7 0%, #EBDCC8 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAEBD7), color-stop(100%, #EBDCC8));
-    background: -webkit-linear-gradient(top, #FAEBD7 0%, #EBDCC8 100%);
-    background: -moz-linear-gradient(top, #FAEBD7 0%, #EBDCC8 100%);
-    background: -o-linear-gradient(top, #FAEBD7 0%, #EBDCC8 100%);
-    background: -ms-linear-gradient(top, #FAEBD7 0%, #EBDCC8 100%);
-    background-color: papayawhip;
-}
-.game-start_overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
 }
 .game-start_header {
     font-size: 25px;
@@ -56,14 +30,12 @@
     box-shadow: 0px 0px 5px 3px purple;
 }
 .game_start_btn {
-    background: #007bff;
-    color: white !important;
     border-radius: 4px;
     border: 0px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     padding: 3px;
     margin: 5px auto 8px;
+    padding: 4px 40px;
     font-weight: 400;
     font-size: calc(var(--cell-size) * 0.5);
-    background-image: linear-gradient(to bottom, #A57164 0%, #966255 100%);
 }
