--- a/src/Components/SideMenu/SideMenu.css
+++ b/src/Components/SideMenu/SideMenu.css
@@ -1,13 +1,17 @@
 .side-menu_container {
     width: 300px;
     height: 250px;
+    overflow: hidden;
 }
 .die .face {
     border: 1px solid var(--color-black);
     border-radius: 5px;
 }
+.die-container {
+    margin: 6.5px 15px !important;
+}
 .die-container_active {
-    box-shadow: 0px 0px 10px 7px red;
+    box-shadow: 0px 0px 6px 6px red;
     border-radius: 5px;
 }
 .dice {
@@ -16,8 +20,8 @@
 }
 .side-menu_info {
     width: 300px;
-    height: 83px;
-    padding: 3px;
+    height: 70px;
+    padding: 3px 10px;
     font-size: x-large;
     line-height: 30px;
     display: table-cell;
