--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -348,6 +348,9 @@
 .game_container-player4 .game_cell-move {
     background: linear-gradient(to right, #9966CC 0%, #8A57BD 100%);
 }
+.game_cell-move-free {
+    background: green;
+}
 .game_chip-selected {
     box-shadow:  0px 0px 4px 4px red;
 }
@@ -421,28 +424,30 @@
     top: calc(var(--cell-size) * 3.9);
     left: calc(var(--cell-size) * 9.3);
 }
-.game_chip-to-be-selected {
+.game-cheat_chip-to-select {
     box-shadow:  0px 0px 5px 5px green;
 }
-.game_chip-shield::after {
+.game_chip-cheat::after {
     content: ' ';
     display: block;
-    width: calc(var(--cell-size) * 0.4);
-    height: calc(var(--cell-size) * 0.4);
-    top: 7px;
-    left: 0px;
-    background-image: url(../../assets/icons/shield.svg);
+    width: calc(var(--cell-size) * 0.26);
+    height: calc(var(--cell-size) * 0.26);
     background-repeat: no-repeat;
     position: absolute;
+    background-size: cover;
+}
+.game_chip-shield::after {
+    top: 7px;
+    left: 2px;
+    background-image: url(../../assets/icons/shield.svg);
 }
 .game_chip-flight::after {
-    content: ' ';
-    display: block;
-    width: calc(var(--cell-size) * 0.4);
-    height: calc(var(--cell-size) * 0.4);
-    background-repeat: no-repeat;
     top: 7px;
-    right: 0px;
+    right: 2px;
     background-image: url(../../assets/icons/flight-white.svg);
-    position: absolute;
+}
+.game_chip-free_shortcuts::after {
+    background-image: url(../../assets/icons/free-shortcuts.svg);
+    top: 19px;
+    right: 11px;
 }
