--- a/src/Components/PlayerInfo/PlayerInfo.css
+++ b/src/Components/PlayerInfo/PlayerInfo.css
@@ -53,6 +53,7 @@
     display: inline-block;
     width: 10px;
     height: 10px;
+    min-width: 10px;
     border: solid 1px black;
     border-radius: 50%;
     margin: 3px 5px 3px 3px;
