--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -32,10 +32,9 @@
 }
 .shop_items-wrapper {
     flex-wrap: wrap;
-    padding: 0px 10px;
     overflow-y: scroll;
     height: calc(var(--cell-size) * 10.1);
-    margin-top: 3px;
+    margin-top: 3px auto 0;
 }
 .shop_item {
     margin: 5px;
