--- a/src/Components/App/common.css
+++ b/src/Components/App/common.css
@@ -123,6 +123,9 @@ div {
     margin-left: 5px;
     margin-right: 5px;
 }
+.margin-t-5 {
+    margin-top: 5px;
+}
 .p-tb-5 {
     padding-top: 5px;
     padding-bottom: 5px;
