--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -331,10 +331,10 @@
     background-color: yellow;
 }
 .game_chip_can-move {
-    box-shadow: 0px 0px 1px 2px;
+    box-shadow: 0px 0px 3px 2px;
 }
-.game_chip_can-move_hoverable:hover {
-    box-shadow:  0px 0px 5px 5px red;
+.game_chip_can-move:hover {
+    box-shadow:  0px 0px 5px 5px;
 }
 .game_cell-move {
     background: linear-gradient(to bottom, #9966CC 0%, #8A57BD 100%);
@@ -352,10 +352,10 @@
     background: green;
 }
 .game_chip-selected {
-    box-shadow:  0px 0px 4px 4px red;
+    box-shadow:  0px 0px 5px 5px;
 }
 .game_chip-can-be-eaten {
-    box-shadow:  0px 0px 4px 4px orange;
+    box-shadow:  0px 0px 3px 2px orange;
 }
 .game_chip-can-be-eaten:hover {
     box-shadow:  0px 0px 5px 5px orange;
@@ -423,9 +423,6 @@
 #game_chip_player4_num4 {
     top: calc(var(--cell-size) * 3.9);
     left: calc(var(--cell-size) * 9.3);
-}
-.game-cheat_chip-to-select {
-    box-shadow:  0px 0px 5px 5px green;
 }
 .game_chip-cheat::after {
     content: ' ';
