--- a/src/Components/Lottery/Lottery.css
+++ b/src/Components/Lottery/Lottery.css
@@ -63,3 +63,17 @@
     font-weight: 400;
     font-size: calc(var(--cell-size) * 0.5);
 }
+.lottery_gift-line {
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+.lottery_gift-line::before {
+    margin-right: 2px;
+    width: 20px;
+    height: 20px;
+    display: block;
+    background-position: center;
+    background-size: cover;
+    content: '  ';
+    background-image: url(../../assets/icons/chip.svg);
+}
