--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -20,16 +20,6 @@
     font-weight: 400;
     font-size: calc(var(--cell-size) * 0.5);
 }
-.shop_tab {
-    padding: 5px 12px;
-    border-radius: 5px;
-    margin: 3px 0px 3px 15px;
-    box-shadow: 0px 0px 2px;
-    background: linear-gradient(to bottom, #E9D66B 0%, #DAC75C 100%);
-}
-.shop_tab-selected {
-    background: linear-gradient(to bottom, #FDEE00 0%, #EEDF00 100%)
-}
 .shop_items-wrapper {
     flex-wrap: wrap;
     overflow-y: scroll;
@@ -69,10 +59,10 @@
     margin: 7.5px auto;
 }
 .shop_item-icon-chips {
-    background-image: url(../../assets/icons/chip.svg);
+    background-image: url(assets/icons/chip.svg);
 }
 .shop_item-icon-money {
-    background-image: url(../../assets/icons/coin.svg);
+    background-image: url(assets/icons/coin.svg);
 }
 .shop_item-description {
     text-align: center;
